--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,7 +5,7 @@
 .image-container img {
     transition: transform 0.3s ease; /* Suaviza o efeito de zoom */
     transform: none; /* Tamanho normal */
-    
+
 }
 .image-container img:hover {
     transform: scale(1.2); /* Aplica o zoom ao passar o mouse */
@@ -26,4 +26,62 @@
 }
 .scroll-hidden {
     overflow-y: scroll;
+}
+
+.color-checkbox {
+    position: relative;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.color-checkbox input {
+    display: none; /* Oculta o checkbox padrão */
+}
+
+.color-checkbox span {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%; /* Faz o círculo */
+    border: 2px solid transparent;
+    transition: all 0.3s;
+}
+
+.color-checkbox input:checked + span {
+    border-color: #000; /* Adiciona borda ao selecionar */
+    transform: scale(1.2); /* Aumenta o círculo quando selecionado */
+}
+
+/* Checkboxes de tamanho */
+.size-checkbox {
+    position: relative;
+    display: inline-block;
+    border: 1px solid #ddd;
+    padding: 5px 10px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: all 0.3s;
+    background-color: #fff; /* Cor padrão do fundo */
+}
+
+.size-checkbox input {
+    display: none; /* Esconde o checkbox original */
+}
+
+.size-checkbox span {
+    font-size: 14px;
+    font-weight: bold;
+    color: #000; /* Cor padrão do texto */
+}
+
+.size-checkbox input:checked + span {
+    background-color: #D9309E; /* Fundo rosa */
+    color: #fff; /* Texto branco */
+    border-color: #D9309E; /* Borda rosa */
+    border-radius: 5px; /* Garante borda arredondada no efeito */
+    display: inline-block;
+    padding: 5px 10px; /* Reaplica padding ao span para cobrir toda a área */
 }
