--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-    /* Cores principais Dashbard*/
+    /* Cores principais */
     --primary-bg: #111113;
-    --secondary-bg: #1F2025;
-    --tertiary-bg: #2C2C2C;
+    --secondary-bg: #1a1a1e;
+    --tertiary-bg: #232327;
 
     /* Cores de destaque */
-    --accent-1: #6D36EB;
+    --accent-1: #6f3dc9;
     --accent-2: #ff8c42;
     --accent-3: #ffd700;
 
@@ -48,12 +48,12 @@
 .tw-text-accent-3 { color: var(--accent-3); }
 
 /* ===== Texto ===== */
-.tw-text-primary { color: var(--text-primary); }
-.tw-text-secondary { color: var(--text-secondary); }
-.tw-text-muted { color: var(--text-muted); }
+.text-primary { color: var(--text-primary); }
+.text-secondary { color: var(--text-secondary); }
+.text-muted { color: var(--text-muted); }
 
 /* ===== Botões e Interações ===== */
-.tw-btn {
+.btn {
     background-color: var(--button-bg);
     color: var(--text-primary);
     padding: 10px 20px;
@@ -62,32 +62,15 @@
     transition: background-color 0.3s;
 }
 
-.tw-btn:hover { background-color: var(--button-hover); }
-.tw-btn:active { background-color: var(--button-active); }
+.btn:hover { background-color: var(--button-hover); }
+.btn:active { background-color: var(--button-active); }
 
 /* ===== Status ===== */
-.tw-status-success { color: var(--status-success); }
-.tw-status-warning { color: var(--status-warning); }
-.tw-status-error { color: var(--status-error); }
-.tw-status-info { color: var(--status-info); }
+.status-success { color: var(--status-success); }
+.status-warning { color: var(--status-warning); }
+.status-error { color: var(--status-error); }
+.status-info { color: var(--status-info); }
 
 /* ===== Bordas e Sombras ===== */
-.tw-border { border: 1px solid var(--border); }
-.tw-shadow { box-shadow: 0 4px 6px var(--shadow); }
-
-.color-primary {
-    color: #F0E1CD;
-}
-
-.color-secundary {
-    color: #FFCE8E;
-}
-
-.color-tercery {
-    color: #573E1E;
-}
-
-
-.color-fundo {
-    background-color: #140c08;
-}
+.border { border: 1px solid var(--border); }
+.shadow { box-shadow: 0 4px 6px var(--shadow); }
